fix(rehber): overflow Fixing the overflow issue Fixing the name

--- a/style/common.css
+++ b/style/common.css
@@ -6,6 +6,9 @@
 .container {
     max-width: 95vw;
 }
+.overflow{
+    overflow: visible!important;
+}
 
 #finderMessage{
     justify-content: center;
